# c-api

./: .gitignore  CMakeLists.txt  README.md
.github/: README.md
apps/ci/: ci-codestyle.sh
asm/: _start.asm  sys_strcpy.asm  sys_strlen.asm  sys_timestamp.asm  sys_write.asm
include/: stdlib.h
include/core/utils/: stdout.h  tools.h
src/: main.c
